--- a/scss/_art.scss
+++ b/scss/_art.scss
@@ -79,7 +79,7 @@
   body {
     background: linear-gradient(328deg, #444, #464646);
     background-size: 600% 600%;
-    font-family: 'Overlock', cursive;
+    font-family: Comic Sans MS, Comic Sans, cursive;
     font-size: 100%;
     // @include prefix((animation: animate-body 30s ease infinite));
   }
@@ -88,7 +88,7 @@
   // # Intro
   //---------------------
   h1 {
-    font-family: 'Comfortaa', cursive;
+    // font-family: 'Comfortaa', cursive;
     // font-size: 2.55em;
     color: #fff;
     text-shadow: 0 3px 10px #000000;
