--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -17,7 +17,7 @@
   main {
     align-items: center;
     text-align: center;
-
+    // position: absolute;
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
@@ -72,6 +72,7 @@
 @include mediaSm {
   main {
     padding: 2rem;
+    // position: absolute;
     #home h1 {
       margin-top: 10vh;
     }
